eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-sedge-feed-deployment
  labels:
    app: simple-sedge-feed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-sedge-feed
  template:
    metadata:
      labels:
        app: simple-sedge-feed
    spec:
      containers:
      - name: simple-sedge-feed
        image: 983218914998.dkr.ecr.us-east-1.amazonaws.com/simple_sedge:latest
        ports:
        - containerPort: 8080
