eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-sedge-feed-service
spec:
  selector:
    app: simple-sedge-feed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
